Fixed styling on venue card and on events cards. Adjusted the font on the dektop - felt too big.

--- a/src/App.scss
+++ b/src/App.scss
@@ -52,7 +52,7 @@ p {
     font-weight: 400;
     line-height: 1.125rem;
     @include desktop {
-        font-size: 1.25rem;
+        font-size: 1rem;
         line-height: 1.375rem;
     }
 }
